6.Ingress/ingress-devlogs.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-service-ingress-devlogs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /log/$1
spec:
  rules:
  - host: brownpanthertech.com
    http:
      paths:
      - path: /developerlogs/log/(.*)
        pathType: Prefix
        backend:
          service:
            name: node-service-logger1-loadbalancer-mode
            port:
              number: 80
